<resources>
    <string name="app_name">Diabetes app</string>
    <!-- Strings related to login -->
    <string name="prompt_glucose">Glucose</string>
    <string name="prompt_blood_pressure">Blood Pressure</string>
    <string name="prompt_insulin">Insulin</string>
    <string name="prompt_BMI">BMI</string>
    <string name="prompt_Age">Age</string>
    <string name="action_send_data">Send Data</string>
    <string name="action_send_data_short">Send Data</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
